[package]
name = "hls_wasm"
version = "0.1.0"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
hls_m3u8 = { git = "https://github.com/sile/hls_m3u8.git", branch = "without-chrono" }
mpeg2ts = { git = "https://github.com/sile/mpeg2ts.git" }
serde = "1"
serde_derive = "1"
serde_json = "1"
trackable = "0.2"
url = { git = "https://github.com/servo/rust-url.git" }
url_serde = "0.2"

[patch.crates-io]
url = { git = "https://github.com/servo/rust-url.git" }